# streamlit_app

./: pyproject.toml  streamlit_app.py
forms/: contact.py
pages/: about_me.py  chatbot.py  devops_calculator.py  sales_dashboard.py
pages/forms/: contact.py
