[project]
name = "streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "streamlit",
]

[tool.uv.sources]
streamlit = { workspace = true }
